@@ -6,3 +6,11 @@ hexalith=The planet's crust is rich with uranium deposits, glowing faintly benea
 
 [technology-name]
 planet-discovery-hexalith=Planet discovery Hexalith
+
+[achievement-name]
+research-with-atoms=Research with atoms
+visit-hexalith=Visit Hexalith
+
+[achievement-description]
+research-with-atoms=Research a technology using nuclear science packs.
+visit-hexalith=Travel to planet Hexalith.
